--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,37 @@
-dnspython~=2.7.0
-idna~=3.10
-httpcore~=1.0.6
-httpx~=0.27.2
-anyio~=4.6.2.post1
-h11~=0.14.0
-pip~=23.0.1
-Jinja2~=3.1.4
-typing_extensions~=4.12.2
-rich~=13.9.2
-Pygments~=2.18.0
-markdown-it-py~=3.0.0
-PyYAML~=6.0.2
-sniffio~=1.3.1
-click~=8.1.7
-certifi~=2024.8.30
-mdurl~=0.1.2
-typer~=0.12.5
-shellingham~=1.5.4
-MarkupSafe~=3.0.1
-uvloop~=0.21.0
-fastapi~=0.115.2
-starlette~=0.40.0
-email_validator~=2.2.0
-pydantic~=2.9.2
-pydantic_core~=2.23.4
-websockets~=13.1
-uvicorn~=0.31.1
-httptools~=0.6.2
-watchfiles~=0.24.0
-greenlet~=3.1.1
-annotated-types~=0.7.0
-python-multipart~=0.0.12
-setuptools~=66.1.1
-SQLAlchemy~=2.0.35
+annotated-types>=0.7.0
+anyio>=4.6.2.post1
+async-timeout>=4.0.3
+asyncpg>=0.29.0
+certifi>=2024.8.30
+click>=8.1.7
+dnspython>=2.7.0
+email_validator>=2.2.0
+fastapi>=0.115.2
+fastapi-cli>=0.0.5
+greenlet>=3.1.1
+h11>=0.14.0
+httpcore>=1.0.6
+httptools>=0.6.2
+httpx>=0.27.2
+idna>=3.10
+Jinja2>=3.1.4
+markdown-it-py>=3.0.0
+MarkupSafe>=3.0.1
+mdurl>=0.1.2
+pydantic>=2.9.2
+pydantic_core>=2.23.4
+Pygments>=2.18.0
+python-dotenv>=1.0.1
+python-multipart>=0.0.12
+PyYAML>=6.0.2
+rich>=13.9.2
+shellingham>=1.5.4
+sniffio>=1.3.1
+SQLAlchemy>=2.0.35
+starlette>=0.40.0
+typer>=0.12.5
+typing_extensions>=4.12.2
+uvicorn>=0.31.1
+uvloop>=0.21.0
+watchfiles>=0.24.0
+websockets>=13.1
