master_key_manager

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL="postgresql+asyncpg://sstoragedb:dbpass@localhost/sstoragedb?ssl=verify-ca"
 CERT_FILE="ssl/root.crt"
+MASTER_KEYS_PATH="master_keys.txt"
