fix get_secrets, and error codes

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DATABASE_URL="postgresql+asyncpg://sstoragedb:dbpass@localhost/sstoragedb?ssl=verify-ca"
-CERT_FILE="ssl/root.crt"
 MASTER_KEYS_PATH="master_keys.txt"
+FASTAPI_CERT="ssl/fastapi.crt"
+FASTAPI_KEY="ssl/fastapi.key"
